<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="150dp"
        android:layout_height="135dp"
        android:layout_marginTop="160dp"
        android:contentDescription="@string/main_logo"
        app:layout_constraintBottom_toTopOf="@+id/main_edtText_nama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginBottom="15dp"
        app:srcCompat="@drawable/ic_welcome_logo" />

    <EditText
        android:id="@+id/main_edtText_nama"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/main_edtText_hintnama"
        android:inputType="textPersonName"
        android:text="@string/main_edtText_nama"
        android:textColor="@color/colorWhite"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/main_edtText_kode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/main_edtText_kode"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/main_edtText_kode"
        android:inputType="textPersonName"
        android:text="@string/main_edtText_kode"
        android:textColor="@color/colorWhite"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/main_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_btn_login"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/m_btn_color"
        android:text="@string/main_btn_login"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/main_txt_tengah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_txt_tengah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="15dp"
        android:text="@string/main_viewText"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/main_btn_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/main_btn_facebook"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/m_btn_color"
        android:text="@string/main_btn_facebook"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/main_btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/main_btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:background="@drawable/main_btn_register"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif"
        android:text="@string/main_btn_register"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>