<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verify2Activity"
    android:background="@color/colorLightBlue">

    <TextView
        android:id="@+id/v2_txt_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="26dp"
        android:text="@string/v2_txt_verify"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/v2_txt_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <TextView
        android:id="@+id/v2_txt_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:gravity="center"
        android:lines="3"
        android:text="@string/v2_txt_send"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/v2_txt_verify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/v2_edtTxt_code"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="textCapCharacters"
        android:hint="@string/v2_edtTxt_code"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v2_txt_send" />

    <Button
        android:id="@+id/v2_btn_send"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="280dp"
        android:background="@drawable/m_btn_color"
        android:text="@string/v2_btn_send"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v2_btn_resend"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/v2_btn_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>