<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Verify1Activity"
    android:background="@color/colorLightBlue">

    <TextView
        android:id="@+id/v1_txt_almost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="26dp"
        android:text="@string/v1_txt_almost"
        android:textColor="@color/colorWhite"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/v1_txt_thank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <TextView
        android:id="@+id/v1_txt_thank"
        android:layout_width="302dp"
        android:layout_height="61dp"
        android:layout_marginBottom="96dp"
        android:gravity="center"
        android:lines="3"
        android:text="@string/v1_txt_thank"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/v1_txt_almost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/v1_btn_verify"
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:layout_marginBottom="276dp"
        android:background="@drawable/m_btn_color"
        android:text="@string/v1_btn_verify"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>